@@ -1,5 +1,6 @@
 Version 2.00.21 - 
 =============================
+  Add report columns for in-kernel device number.
 
 Version 2.00.20 - 3 July 2004
 =============================
